# Rust-Password-Manager-Server

./: Cargo.toml  README.md
migrations/: 0001_initialize_database.sql  20240329103412_init.down.sql  20240329103412_init.up.sql
src/: api.rs  authentication.rs  config.rs  database.rs  handler.rs  main.rs  model.rs  utils.rs
src/tests/: test.rs
