[package]
name = "rust-password-manager-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
rust-ini = "0.21.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate", "uuid", "chrono"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
argon2 = "0.5.3"
time = "0.3.36"
serde_json = "1.0.118"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
rand_core = { version = "0.6.4", features = ["std"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tower-http = { version = "0.5.2", features = ["cors"] }
